# tensor

./: .gitignore  config.toml
backend/: Cargo.toml
backend/.next/: trace
backend/src/: app.rs  authenticate.rs  conversations.rs  main.rs
backend/src/authenticate/: jwt.rs  mod.rs
backend/src/conversations/: chat.rs  mod.rs
backend/src/threads/: get_threads.rs  mod.rs  new_thread.rs  send_message.rs  thread_summary.rs
backend/src/utils/: cookie.rs  mod.rs  response.rs  stream_to_channel.rs  timestamp.rs
backend/src/utils/db/: mod.rs
webapp/: drizzle.config.ts  next.config.js  package.json
webapp/src/app/: globals.scss  layout.tsx  page.tsx  providers.tsx
webapp/src/app/chat/: chat.module.scss  page.tsx
webapp/src/app/chat/conversation/: conversation.module.scss  conversation.tsx
webapp/src/app/chat/sidebar/: sidebar.module.scss  sidebar.tsx
webapp/src/backendWrapper/: askLLM.ts  newThread.ts  sendMessage.ts  streamBodyCallback.ts
webapp/src/components/: base.scss  index.ts
webapp/src/components/activeRing/: activeRing.tsx
webapp/src/components/button/: button.module.scss  button.tsx
webapp/src/components/chip/: chip.module.scss  chip.tsx
webapp/src/components/message/: message.module.scss  message.tsx
webapp/src/components/squircle/: squircle.module.scss  squircle.tsx
webapp/src/components/textareaAutosize/: textareaAutosize.module.scss  textareaAutosize.tsx
webapp/src/server/db/: schema.ts
webapp/src/ui/components/: base.scss  index.ts
webapp/src/utils/: keysDown.tsx  types.tsx  userInfo.tsx
(+58 files in other folders)
